--- a/client/css/style.css
+++ b/client/css/style.css
@@ -1,3 +1,26 @@
 body {
   padding: 0;
   margin: 0; }
+
+.dropDownForm {
+  margin: 0 20px; }
+
+.anchor {
+  cursor: pointer; }
+
+.main {
+  background: url("../img/main_bg.png") no-repeat;
+  background-size: cover;
+  width: 100%;
+  height: 400px;
+  padding-top: 100px; }
+
+.description {
+  width: 30%;
+  margin-right: 2%;
+  line-height: 25px;
+  float: right;
+  text-align: right; }
+  @media screen and (max-width: 768px) {
+    .description {
+      width: 70%; } }
