--- a/client/src/scss/style.scss
+++ b/client/src/scss/style.scss
@@ -1,4 +1,35 @@
+$phone: 768px;
+$tablet: 992px;
+$small-desk: 1200px;
+$bg-color: #6BBD6E;
 body {
   padding: 0;
   margin: 0;
+}
+
+.dropDownForm {
+  margin: 0 20px;
+}
+
+.anchor {
+  cursor: pointer;
+}
+
+.main {
+  background: url('../img/main_bg.png') no-repeat;
+  background-size: cover;
+  width: 100%;
+  height: 400px;
+  padding-top:100px;
+}
+
+.description {
+  width: 30%;
+  margin-right: 2%;
+  @media screen and (max-width: $phone) {
+    width: 70%;
+  }
+  line-height: 25px;
+  float:right;
+  text-align: right;
 }
